# predictive-maintenance

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  cov.txt  docker-compose.yml  mypy_errors.txt  mypy_errors_utf8.txt  mypy_results.txt  mypy_train_errors.txt  mypy_train_utf8.txt  out.txt  pyproject.toml  pytest_errors.txt  pytest_results.txt  requirements-advanced.txt  requirements.txt  ruff_check_output.txt  ruff_errors.txt  ruff_out.txt  ruff_results.txt  run.py  sentinel.db  server_output.txt
.github/workflows/: ci.yml
artifacts/: meta.json
huggingface_spaces/: README.md  app.py
monitoring/: docker-compose.yml  prometheus.yml
scripts/: download_model.py  generate_ci_data.py
src/app/: main.py
src/core/: database.py  preprocessing.py  risk_engine.py
src/models/: train.py  train_advanced.py
src/serving/: inference.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_inference.py  test_preprocessing.py  test_risk_engine.py
