[build-system]
requires      = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name            = "predictive-maintenance"
version         = "10.0.0"
description     = "Enterprise Industrial AI API with full persistence, audit trails, and 360 observability."
readme          = "README.md"
license         = { file = "LICENSE" }
requires-python = ">=3.11"
authors         = [{ name = "Sentinel ML Ops", email = "engineering@sentinel-ai.com" }]
keywords        = ["predictive-maintenance", "ml-ops", "industrial-ai", "fastapi", "scikit-learn"]
classifiers     = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "joblib>=1.4.0",
    "gradio>=4.31.0",
    "httpx>=0.27.0",
    "prometheus-client>=0.20.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "structlog>=24.1.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "mlflow>=2.13.0",
]

[project.optional-dependencies]
advanced = [
    "xgboost>=2.0.0",
    "optuna>=3.6.0",
    "mlflow>=2.13.0",
]
dev = [
    "ruff",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pandas-stubs",
    "types-requests",
]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths  = ["tests"]
pythonpath = ["."]
addopts    = "--tb=short -q"

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
omit   = ["src/models/train_advanced.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["E501", "S101", "B008", "S310", "S108"]

# ---------------------------------------------------------------------------
# mypy  — strict mode for verified type safety
# ---------------------------------------------------------------------------
[tool.mypy]
python_version            = "3.11"
strict                    = true
warn_return_any           = true
warn_unused_configs       = true
ignore_missing_imports    = true
exclude                   = ["src/models/train_advanced\\.py", "tests/"]
plugins                   = ["pydantic.mypy"]
disallow_untyped_decorators = false
